[project]
name = "thatchertiler"
description = "ThatcherTiler: expect some features to be dropped. A lightweight tiles server based on PMTiles format."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
dynamic = ["version"]
dependencies = [
    "aiopmtiles @ git+https://github.com/developmentseed/aiopmtiles.git",
    "uvicorn",
    "fastapi>=0.100.0",
    "jinja2>=2.11.2,<4.0.0",
    "pydantic>=2.4,<3.0",
    "pydantic-settings~=2.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "brotlipy",
]
dev = [
    "pre-commit",
]
server = [
    "uvicorn[standard]>=0.12.0,<0.19.0",
]

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "thatchertiler"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["thatchertiler"]
known_third_party = ["aiopmtiles"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = true

[tool.ruff]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]
